--- a/03_django/05_relation/requirements.txt
+++ b/03_django/05_relation/requirements.txt
@@ -1,5 +1,29 @@
 asgiref==3.6.0
+asttokens==2.2.1
+backcall==0.2.0
+beautifulsoup4==4.12.2
+colorama==0.4.6
+decorator==5.1.1
 Django==3.2.18
+django-bootstrap-v5==1.0.11
 django-extensions==3.2.1
+django-seed==0.2.2
+executing==1.2.0
+Faker==18.3.4
+ipython==8.12.0
+jedi==0.18.2
+matplotlib-inline==0.1.6
+parso==0.8.3
+pickleshare==0.7.5
+prompt-toolkit==3.0.38
+pure-eval==0.2.2
+Pygments==2.14.0
+python-dateutil==2.8.2
 pytz==2023.3
+six==1.16.0
+soupsieve==2.4
 sqlparse==0.4.3
+stack-data==0.6.2
+toposort==1.10
+traitlets==5.9.0
+wcwidth==0.2.6
